# sparkalog

./: .gitignore  Cargo.toml  PROPOSAL.md  README.md
benchmarks/: README.md  anti-join-crossover.csv  distinct-crossover.csv  filter-crossover.csv  join-crossover.csv  union-crossover.csv
crates/sparkalog-cli/: Cargo.toml
crates/sparkalog-cli/src/: main.rs
crates/sparkalog-datalog/: Cargo.toml
crates/sparkalog-datalog/src/: ast.rs  catalog.rs  database.rs  general.rs  ingest.rs  lib.rs  parser.rs  resolve.rs  schedule.rs  subset.rs
crates/sparkalog-execution/: Cargo.toml  build.rs
crates/sparkalog-execution/native/: column_ops.cu
crates/sparkalog-execution/src/: lib.rs  placement.rs
crates/sparkalog-recursion/: Cargo.toml
crates/sparkalog-recursion/src/: generic.rs  lib.rs
crates/sparkalog-relational/: Cargo.toml
crates/sparkalog-relational/src/: lib.rs
crates/sparkalog-storage/: Cargo.toml  build.rs
crates/sparkalog-storage/src/: io.rs  lib.rs
examples/: stratified-negation.dl  transitive-closure.dl
scripts/: fetch-gdlog-data.sh
