[workspace]
resolver = "3"
members = [
    "crates/sparkalog-cli",
    "crates/sparkalog-datalog",
    "crates/sparkalog-execution",
    "crates/sparkalog-recursion",
    "crates/sparkalog-relational",
    "crates/sparkalog-storage",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"

