[package]
name = "sparkalog"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sparkalog-execution = { path = "../sparkalog-execution" }
sparkalog-relational = { path = "../sparkalog-relational" }
sparkalog-storage = { path = "../sparkalog-storage" }

[[bin]]
name = "sparkalog"
path = "src/main.rs"

[[bin]]
name = "filter-crossover"
path = "src/bin/filter-crossover.rs"

[[bin]]
name = "graph-smoke"
path = "src/bin/graph-smoke.rs"

[[bin]]
name = "join-crossover"
path = "src/bin/join-crossover.rs"

[[bin]]
name = "distinct-crossover"
path = "src/bin/distinct-crossover.rs"

[[bin]]
name = "anti-join-crossover"
path = "src/bin/anti-join-crossover.rs"

[lints]
workspace = true
