[package]
name = "sparkalog"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sparkalog-datalog = { path = "../sparkalog-datalog" }
sparkalog-execution = { path = "../sparkalog-execution" }
sparkalog-relational = { path = "../sparkalog-relational" }
sparkalog-recursion = { path = "../sparkalog-recursion" }
sparkalog-storage = { path = "../sparkalog-storage" }

[[bin]]
name = "sparkalog"
path = "src/main.rs"

[[bin]]
name = "filter-crossover"
path = "src/bin/filter-crossover.rs"

[[bin]]
name = "graph-smoke"
path = "src/bin/graph-smoke.rs"

[[bin]]
name = "join-crossover"
path = "src/bin/join-crossover.rs"

[[bin]]
name = "distinct-crossover"
path = "src/bin/distinct-crossover.rs"

[[bin]]
name = "anti-join-crossover"
path = "src/bin/anti-join-crossover.rs"

[[bin]]
name = "union-crossover"
path = "src/bin/union-crossover.rs"

[[bin]]
name = "tc-fixpoint"
path = "src/bin/tc-fixpoint.rs"

[lints]
workspace = true
