[package]
name = "sparkalog-datalog"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rayon = "1.11"
sparkalog-execution = { path = "../sparkalog-execution" }
sparkalog-recursion = { path = "../sparkalog-recursion" }
sparkalog-relational = { path = "../sparkalog-relational" }
sparkalog-storage = { path = "../sparkalog-storage" }

[lints]
workspace = true
