[package]
name = "sparkalog-execution"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
rayon = "1.11"
sparkalog-relational = { path = "../sparkalog-relational" }
sparkalog-storage = { path = "../sparkalog-storage" }

[lints]
workspace = true
